update fwfh_chewie package from github

--- a/packages/enhanced/pubspec.yaml
+++ b/packages/enhanced/pubspec.yaml
@@ -12,7 +12,11 @@ dependencies:
     sdk: flutter
   flutter_widget_from_html_core: ^0.7.0
   fwfh_cached_network_image: ^0.7.0
-  fwfh_chewie: ^0.7.0
+  fwfh_chewie:
+    git:
+      url: git://github.com/duonghainbs/flutter_widget_from_html.git
+      ref: master
+      path: packages/fwfh_chewie
   fwfh_just_audio: ^0.6.2
   fwfh_svg: ^0.7.0
   fwfh_url_launcher: ^0.6.1+2
